# GGUFSync

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: build.py
src/gguf_sync/: main.py
src/gguf_sync/core/: logging.py
src/link_models/: __init__.py  __main__.py  main.py
src/link_models/backends/: __init__.py  base.py  gpt4all.py  jan.py  koboldcpp.py  llama_cpp.py  llama_cpp_python.py  lmstudio.py  localai.py  ollama.py  textgen.py  vllm.py
src/link_models/core/: __init__.py  config.py  constants.py  exceptions.py  gguf_parser.py  logging.py  models.py  service.py  sync.py  watcher.py
tests/: __init__.py  conftest.py
tests/integration/: test_addons.py  test_backends.py  test_new_backends.py  test_sync_engine.py
tests/unit/: test_config.py  test_discovery.py  test_download_detector.py  test_gguf_parser_main.py  test_main_cli.py  test_models.py  test_new_configs.py  test_sync_core.py
